plugins {
    id 'java'
    id 'application'
}

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

mainClassName = 'ninja.haxing.jping.Main'

jar {
    manifest {
        attributes(
                'Main-Class': mainClassName
        )
    }
}